<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/hello_picture"/>


    <ImageView
        android:id="@+id/hello_picture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/hello"
        app:layout_constraintLeft_toRightOf="@+id/profile_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/i_m_robert_smith"
        app:layout_constraintTop_toBottomOf="@+id/hello_picture"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintBottom_toTopOf="@id/intro"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/intro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/developer_and_startup_entrepeneur"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line_separator"
        android:layout_marginBottom="30px"/>
    <View
        android:id="@+id/line_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/age"/>
    <TextView
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/age"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/line_separator"
        app:layout_constraintEnd_toStartOf="@+id/age_number"
        app:layout_constraintBottom_toTopOf="@id/address"
        android:layout_marginBottom="10px"
        android:layout_marginTop="30px"/>
    <TextView
        android:id="@+id/age_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_29"
        app:layout_constraintStart_toEndOf="@id/age"
        app:layout_constraintTop_toBottomOf="@id/line_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/address_text"
        android:layout_marginBottom="10px"
        android:layout_marginTop="30px"/>
    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/address"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintEnd_toStartOf="@id/address_text"
        app:layout_constraintTop_toBottomOf="@id/age"
        app:layout_constraintBottom_toTopOf="@id/email"
        android:layout_marginBottom="10px"
        android:layout_marginTop="10px"/>
    <TextView
        android:id="@+id/address_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_24058_belgium_brussels_liutte_27_be"
        app:layout_constraintStart_toEndOf="@id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_number"
        app:layout_constraintBottom_toTopOf="@id/email_address"
        android:layout_marginBottom="10px"
        android:layout_marginTop="10px"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/e_mail"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintEnd_toStartOf="@id/email_address"
        app:layout_constraintBottom_toTopOf="@id/phone"
        android:layout_marginBottom="10px"
        android:layout_marginTop="10px"/>
    <TextView
        android:id="@+id/email_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/robersmith_company_com"
        app:layout_constraintTop_toBottomOf="@id/address_text"
        app:layout_constraintStart_toEndOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/phone_number"
        android:layout_marginBottom="10px"
        android:layout_marginTop="10px"/>
    <TextView
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/phone"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintEnd_toStartOf="@id/phone_number"
        app:layout_constraintBottom_toTopOf="@id/freelance"
        android:layout_marginBottom="10px"
        android:layout_marginTop="10px"/>
    <TextView
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_1_256_254_84_56"
        app:layout_constraintTop_toBottomOf="@id/email_address"
        app:layout_constraintStart_toEndOf="@id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dates"
        android:layout_marginBottom="10px"
        android:layout_marginTop="10px"/>
    <TextView
        android:id="@+id/freelance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/freelance"
        app:layout_constraintTop_toBottomOf="@id/phone"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintEnd_toStartOf="@id/dates"
        app:layout_constraintBottom_toTopOf="@id/bottom_border"
        android:layout_marginBottom="10px"
        android:layout_marginTop="10px"/>
    <TextView
        android:id="@+id/dates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/till_march_25_2016"
        app:layout_constraintTop_toBottomOf="@id/phone_number"
        app:layout_constraintStart_toEndOf="@id/freelance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_border"
        android:layout_marginBottom="10px"
        android:layout_marginTop="10px"/>
    <View
        android:id="@+id/bottom_border"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/color_red"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/facebook"
        app:layout_constraintTop_toTopOf="@id/bottom_border"
        app:layout_constraintBottom_toBottomOf="@id/bottom_border"
        app:layout_constraintStart_toStartOf="@id/bottom_border"
        app:layout_constraintEnd_toStartOf="@mipmap/twitter"/>
    <ImageView
        android:id="@+id/twitter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/twitter"
        app:layout_constraintTop_toTopOf="@id/bottom_border"
        app:layout_constraintBottom_toBottomOf="@id/bottom_border"
        app:layout_constraintStart_toEndOf="@id/facebook"
        />
    <ImageView
        android:id="@+id/linked_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/linked_in"
        app:layout_constraintTop_toTopOf="@id/bottom_border"
        app:layout_constraintBottom_toBottomOf="@id/bottom_border"
        app:layout_constraintStart_toEndOf="@id/twitter"
        app:layout_constraintEnd_toStartOf="@id/google_plus"
        />
    <ImageView
        android:id="@+id/google_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/google_plus"
        app:layout_constraintTop_toTopOf="@id/bottom_border"
        app:layout_constraintBottom_toBottomOf="@id/bottom_border"
        app:layout_constraintStart_toEndOf="@id/linked_in"
        app:layout_constraintEnd_toStartOf="@id/basketball"
        />
    <ImageView
        android:id="@+id/basketball"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/basketball"
        app:layout_constraintTop_toTopOf="@id/bottom_border"
        app:layout_constraintBottom_toBottomOf="@id/bottom_border"
        app:layout_constraintStart_toEndOf="@mipmap/google_plus"
        app:layout_constraintEnd_toStartOf="@id/instagram"
        />
    <ImageView
        android:id="@+id/instagram"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/instagram"
        app:layout_constraintTop_toTopOf="@id/bottom_border"
        app:layout_constraintBottom_toBottomOf="@id/bottom_border"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>